# z_lib_tool

./: main.py  pyproject.toml  test_output.txt  test_output_2.txt  設計書.md
src/z_lib/: __init__.py  _types.py  core.py  exceptions.py  path_resolver.py
src/z_lib/backend/: __init__.py  protocol.py  zipfile_backend.py
src/z_lib/namespaces/: z_os.py  z_os_path.py  z_shutil.py
tests/: conftest.py  test_backend.py  test_core.py  test_namespaces.py  test_open.py  test_path_resolver.py
